test/scc/pp/errors/028.t
#if defined 1
#endif